Adding missing changes
