# docs/swagger.yaml
@@ -13,6 +13,9 @@ definitions:
         items:
           $ref: '#/definitions/domain.Procedure'
         type: array
+      real_start_date:
+        default: "2006-01-02T00:00:00Z"
+        type: string
       start_date:
         type: string
       status:
@@ -174,7 +177,8 @@ paths:
             type: array
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Get appointments by date range
       tags:
       - Appointment
@@ -203,7 +207,8 @@ paths:
             $ref: '#/definitions/domain.Appointment'
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Create an appointment
       tags:
       - Appointment
@@ -228,10 +233,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Cancel an appointment by an id
       tags:
       - Appointment
@@ -257,10 +264,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Add appointment procedure
       tags:
       - Appointment
@@ -286,7 +295,8 @@ paths:
             type: array
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Get appointments user history
       tags:
       - Appointment
@@ -307,13 +317,89 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Recover user password
       tags:
       - Auth
+  /reports/attendance-report:
+    get:
+      consumes:
+      - application/json
+      description: Generate a report about the amount of patients that not assist
+        to their appointments
+      parameters:
+      - description: Start Date with format YYYY-MM-DD
+        in: query
+        name: start_date
+        required: true
+        type: string
+      - description: End Date with format YYYY-MM-DD
+        in: query
+        name: end_date
+        required: true
+        type: string
+      - description: Authorization Token
+        in: header
+        name: authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Generate a report about the amount of patients that not assist to their
+        appointments
+      tags:
+      - Report
+  /reports/waiting-time-report:
+    get:
+      consumes:
+      - application/json
+      description: Generate a report about the waiting time of the patients for their
+        appointments
+      parameters:
+      - description: Start Date with format YYYY-MM-DD
+        in: query
+        name: start_date
+        required: true
+        type: string
+      - description: End Date with format YYYY-MM-DD
+        in: query
+        name: end_date
+        required: true
+        type: string
+      - description: Authorization Token
+        in: header
+        name: authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Generate a report about the waiting time of the patients for their
+        appointments
+      tags:
+      - Report
   /reset-password:
     post:
       consumes:
@@ -331,10 +417,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Reset user password with verification token
       tags:
       - Auth
@@ -355,10 +443,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "401":
           description: Unauthorized
-          schema: {}
+          schema:
+            type: object
       summary: Authenticate user by DNI and Password
       tags:
       - Auth
@@ -388,7 +478,8 @@ paths:
             $ref: '#/definitions/domain.User'
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Create an regular or admin user
       tags:
       - User
@@ -423,7 +514,8 @@ paths:
             type: array
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Get users by role
       tags:
       - User
@@ -452,7 +544,8 @@ paths:
             $ref: '#/definitions/domain.User'
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Get user by DNI
       tags:
       - User
@@ -478,10 +571,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Assign user role by an admin
       tags:
       - User
@@ -506,10 +601,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Load user information by CSV
       tags:
       - User
@@ -533,7 +630,8 @@ paths:
             $ref: '#/definitions/domain.User'
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Get authenticated user information
       tags:
       - User
@@ -558,10 +656,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "404":
           description: Not Found
-          schema: {}
+          schema:
+            type: object
       summary: Update authenticated user information
       tags:
       - User
@@ -587,10 +687,12 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            type: object
         "401":
           description: Unauthorized
-          schema: {}
+          schema:
+            type: object
       summary: Reset the password of an user by DNI
       tags:
       - User
